[project]
name = "little-turtle"
version = "0.1.0"
description = ""
authors = [{ email = "pavel.karpovich@outlook.com", name = "Pavel Karpovich" }]
readme = "README.md"
requires-python = ">= 3.13"
dependencies = [
    "python-dotenv>=1.0.1",
    "openai>=1.23.6",
    "telethon>=1.35.0",
    "dependency-injector>=4.48.1",
    "aiogram>=3.5.0",
    "structlog>=24.1.0",
    "apscheduler>=3.10.4",
    "redis>=5.0.3",
    "pytz>=2025.2",
    "pydantic>=2.11.7",
    "anthropic>=0.57.1",
    "arize-phoenix-otel>=0.12.1",
    "openinference-instrumentation-openai>=0.1.30",
    "openinference-instrumentation-anthropic>=0.1.18",
    "arize-phoenix-client>=1.13.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.12.5",
]

[tool.black]
line-length = 88
target-version = ['py313']
